tests/NormalTests/paczka1/small_fuzzy/37856282.err
Error in line 3: vDGQjxkO S415 43,2
Error in line 11: S415 S979 179,9
